Fix issue with images in blog posts on mobile

--- a/css/defold.scss
+++ b/css/defold.scss
@@ -525,6 +525,13 @@ input[type="submit"]:hover {
 	margin-right: auto;
 }
 
+.post img {
+	max-width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /*******************************************************************************
 * Icons (fontello.css)
 ******************************************************************************/
